--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -27,7 +27,8 @@
       "#app": ["./src/app/"],
       "#app/*": ["./src/app/*"],
       "#shared/*": ["./src/shared/*"],
-      "#lib/*": ["./src/lib/*"]
+      "#lib/*": ["./src/lib/*"],
+      "#config/*": ["./src/config/*"]
     }
   }
 }
